--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/Priyadharshini-max/Tech-server#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.3",
+    "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   }
 }
